--- a/DownloadPlist.plist
+++ b/DownloadPlist.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/testIPA/master/Y.ipa</string>
+					<string>https://github.com/Gsl201600/IPA_OTA/raw/main/MJDemo_V1.0.0_2024-02-26_14-33-08.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
