--- a/DownloadPlist2.plist
+++ b/DownloadPlist2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/testIPA/master/Y.ipa</string>
+					<string>https://github.com/Gsl201600/IPA_OTA/raw/main/MJU3DDemo_V1.0.0_2024-02-29_14-46-58.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
